Updated login and signup styles, and fixed some bugs. (#24)
* Updated styling to match the VolunteerDash and Refugee components.

* Updated the sign and login styles. Had to propogate some styling changes into HostDash and VolunterDash for consistency

* Fixed UI glitch where the add new psot/refugee view was getting cut off

* Changed the type of signup password field from plaintext to 'password'

* Added proper additionalInfo fields to POST and GET requests in Volunteer and Host dashboards.

--- a/deliverable-2/frontend/src/components/HostDash/HostDash.css
+++ b/deliverable-2/frontend/src/components/HostDash/HostDash.css
@@ -1,11 +1,14 @@
+.hostdash-container {
+    width: 100%;
+    height: 100%;
+}
+
 .hostdash-nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
 
     position: fixed;
-    top: 0;
-    left: 0;
     box-sizing: border-box;
     height: 7vh;
     width: 100%;
@@ -29,8 +32,11 @@
 }
 
 .hostdash {
-    margin-top: 7vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     box-sizing: border-box;
+    margin-top: 7vh;
     padding: 1px;
 }
 
@@ -41,9 +47,9 @@
     box-sizing: border-box;
 
     position: fixed;
+    margin: auto;
     width: 100%;
     height: 100%;
-    margin: auto;
     z-index: 100;
 
     background-color: rgba(200, 200, 200, 0.4);
@@ -56,8 +62,8 @@
 
     width: 800px;
     height: 850px;
-    margin: 3.5rem;
     padding: 1rem 2rem;
+    margin-top: 0.75rem;
 
     background-color: white;
     box-shadow: 0px 5px 10px 0px rgb(138 134 138);
