--- a/deliverable-2/frontend/src/components/Login/Login.css
+++ b/deliverable-2/frontend/src/components/Login/Login.css
@@ -1,29 +1,58 @@
-.loginContainer {
-    text-align: center;
-
+.login-container {
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    border-radius: 5px;
-    border: 2px solid purple;
-    width: fit-content;
-    margin: 0 auto;
-    margin-top: 20vh;
-    font-size: large;
+    justify-content: space-between;
+
+    margin: auto;
+    width: 500px;
+    height: 500px;
+    padding: 1rem;
+
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0px 2px 10px 0px rgb(138 134 138);
 }
 
-.loginTitle {
-    color: purple;
-    border-bottom: 2px solid purple;
-    width: 100%;
-}
-
-.loginElement {
-    padding: 10px 10vh 10px; 
-}
-
-.loginButton {
-    padding: 5px;
-    width: 80px;
+.login-title {
+    box-sizing: border-box;
+    font-size: 2rem;
+    color: rgb(110, 110, 110);
     text-align: center;
-    font-size: medium;
-    margin: 10px 10px 10px;
+    border-bottom: 4px rgb(200, 200, 200) solid;
+}
+
+.login-element {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: left;
+    width: 60%;
+}
+.login-element input {
+    font-size: 15pt;
+    box-sizing: border-box;
+    border: 1px rgb(200, 200, 200) solid;
+    padding: 1rem;
+}
+.login-element label {
+    font-size: 15pt;
+    padding: 1rem 0rem;
+    color: rgb(150, 150, 150);
+    margin-bottom: 0;
+}
+
+.login-button {
+    width: 100px;
+    padding: 0.5rem 1rem;
+    margin: 1rem;
+}
+.signup-button {
+    padding: 0.5rem 1rem;
+
+    color: rgb(37, 157, 231);
+    background-color: transparent;
+    border: none;
+    font-size: 12pt;
+    margin: 1rem;
 }
