--- a/deliverable-2/frontend/src/components/SignUp/SignUp.css
+++ b/deliverable-2/frontend/src/components/SignUp/SignUp.css
@@ -1,34 +1,52 @@
-.signupContainer {
+.signup-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+
+    margin: auto;
+    width: 500px;
+    height: fit-content;
+    padding: 1rem;
+
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0px 2px 10px 0px rgb(138 134 138);
+}
+
+.signup-title {
+    box-sizing: border-box;
+    width: 90%;
+    font-size: 2rem;
+    color: rgb(110, 110, 110);
     text-align: center;
-
-    border-radius: 5px;
-    border: 2px solid purple;
-    width: fit-content;
-    margin: 0 auto;
-    margin-top: 20vh;
-    font-size: large;
+    border-bottom: 4px rgb(200, 200, 200) solid;
 }
 
-.signupTitle {
-    color: purple;
-    border-bottom: 2px solid purple;
-    width: 100%;
-}
-
-.signupElement {
-    padding: 10px 10vh 10px;
+.signup-element {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     text-align: left;
+    width: 90%;
 }
 
-.signupElement input {
-    margin-left: 10px;
-    float: right;
+.signup-element input {
+    font-size: 15pt;
+    box-sizing: border-box;
+    border: 1px rgb(200, 200, 200) solid;
+    padding: 1rem;
+}
+.signup-element label {
+    font-size: 15pt;
+    padding: 1rem 0rem;
+    color: rgb(150, 150, 150);
+    margin-bottom: 0;
 }
 
-.signupButton {
-    padding: 5px;
-    width: 80px;
-    text-align: center;
-    font-size: medium;
-    margin: 10px 10px 10px;
+.signup-create-acc-button {
+    font-size: 12pt;
+    width: 150px;
+    padding: 1rem 1rem;
+    margin-top: 1rem;
 }
